# SeRoNet-OPC-UA-Backend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SeRoNetSDKConfig.cmake.in
.github/: CMakeLists.txt
.github/workflows/: build.yml
SeRoNetSDK/: Definitions.hpp
SeRoNetSDK/SeRoNet/CommunicationObjects/: ICommunicationObject.hpp
SeRoNetSDK/SeRoNet/CommunicationObjects/DefaultObjects/: EnumParamResponseType.h  ParameterRequest.cpp  ParameterRequest.h  ParameterRequest.hpp  ParameterResponse.cpp  ParameterResponse.h  WiringCommObject.hpp
SeRoNetSDK/SeRoNet/CommunicationObjects/DefaultObjects/CommParameterIDL/: ParameterRequestIdl.h  ParameterRequestIdl.hpp  ParameterResponseIdl.h  ParameterResponseIdl.hpp
SeRoNetSDK/SeRoNet/CommunicationObjects/Description/: ComplexType.cpp  ComplexType.hpp  ElementArray.hpp  ElementPrimitive.hpp  ElementPrimitives.hpp  IDescription.hpp  IVisitableDescription.hpp  IVisitorDescription.hpp  SelfDescription.hpp  SelfDescriptionArray.hpp  SelfDescriptionPrimitives.hpp
SeRoNetSDK/SeRoNet/CommunicationObjects/Description/DefaultObjects/: ParameterRequestDescription.cpp  ParameterRequestDescription.h  ParameterRequestDescription.hpp  ParameterRequestIdlDescription.cpp  (+8 more)
SeRoNetSDK/SeRoNet/DefaultCommObjects/: EnumParamResponseType.hpp  EnumParamResponseTypeBase.hpp  ParameterRequest.cpp  ParameterRequest.hpp  ParameterResponse.cpp  ParameterResponse.hpp  WiringCommObject.cpp  WiringCommObject.hpp
SeRoNetSDK/SeRoNet/DefaultCommObjects/CommParameterIDL/: ParameterRequestIdl.hpp  ParameterResponseIdl.hpp
SeRoNetSDK/SeRoNet/DefaultCommObjects/Description/: ParameterRequestDescription.cpp  ParameterRequestDescription.hpp  ParameterRequestIdlDescription.cpp  ParameterRequestIdlDescription.hpp  ParameterResponseDescription.cpp  ParameterResponseDescription.hpp  ParameterResponseIdlDescription.cpp  ParameterResponseIdlDescription.hpp  WiringCommObjectDescription.cpp  WiringCommObjectDescription.hpp
SeRoNetSDK/SeRoNet/DefaultCommObjects/Descriptions/: ParameterRequestIdlDescription.cpp  ParameterResponseDescription.cpp  ParameterResponseIdlDescription.cpp  ParameterResponseIdlDescription.hpp
SeRoNetSDK/SeRoNet/Exceptions/: BlockingDisabledException.hpp  DisconnectedException.hpp  InvalidConversion.hpp  NoDataAvailableException.hpp  NotImplementedException.hpp  OutOfRange.hpp  ResultErrorException.hpp  SeRoNetSDKException.hpp  UnsubscribedException.hpp
SeRoNetSDK/SeRoNet/OPCUA/Client/: AsyncAnswer.hpp  AsyncAnswerFactory.hpp  AsyncAnswerFactoryWithCommObject.hpp  AsyncAnswerMethod.hpp  AsyncAnswerMethodCommObjectRequest.cpp  AsyncAnswerMethodCommObjectRequest.hpp  AsyncAnswerMethodCoordinateObjectRequest.hpp  AsyncSubscription.hpp  AsyncSubscriptionArrayBuffer.hpp  AsyncSubscriptionOpcUa.hpp  AsyncSubscriptionReader.hpp  AsyncSubscriptionWithCommObject.hpp  EventClient.hpp  IAnswerState.cpp  IAnswerState.hpp  IBlocking.cpp  IBlocking.hpp  INamingService.hpp  InstanceStorage.hpp  NamingServiceOpcUa.cpp  NamingServiceOpcUa.hpp  ParameterMaster.cpp  ParameterMaster.hpp  PushClient.hpp  PushClientOpcUaCommObj.hpp  QClientOPCUA.hpp  QClientOPCUACommObj.hpp  QueryClient.hpp  SendClient.hpp  SendClientOpcUa.hpp  UaClientWithMutex.hpp  WiringHandler.hpp
SeRoNetSDK/SeRoNet/OPCUA/Converter/: CommObjArrayToTypeIndex.cpp  CommObjArrayToTypeIndex.hpp  CommObjArrayToValue.cpp  CommObjArrayToValue.hpp  CommObjectBrowseToNodeIds.cpp  CommObjectBrowseToNodeIds.hpp  CommObjectToListOfPrimitivDescriptions.cpp  CommObjectToListOfPrimitivDescriptions.hpp  CommObjectToPushModel.cpp  CommObjectToPushModel.hpp  CommObjectToUaArgument.cpp  CommObjectToUaArgument.hpp  CommObjectToUaVariantArray.cpp  CommObjectToUaVariantArray.hpp  UaVariantArrayToCommObject.cpp  UaVariantArrayToCommObject.hpp  UaVariantToCommObjArray.cpp  UaVariantToCommObjArray.hpp  VariantToCommObjArray.cpp  VariantToCommObjArray.hpp
SeRoNetSDK/SeRoNet/OPCUA/Server/: CommObjectToPushModel.cpp  CommObjectToPushModel.hpp  CommObjectToPushModell.cpp  CommObjectToPushModell.hpp  CommObjectToUaArgument.cpp  CommObjectToUaArgument.hpp  EventServer.hpp  OpcuaServer.cpp  OpcuaServer.hpp  ParameterSlave.cpp  ParameterSlave.hpp  ParameterUpdateHandler.cpp  ParameterUpdateHandler.hpp  PushServer.hpp  PushServerDisabler.cpp  PushServerDisabler.hpp  PushServerEnabler.cpp  PushServerEnabler.hpp  PushServerUpdater.cpp  PushServerUpdater.hpp  QueryServer.hpp  QueryServerHandler.hpp  SendServer.hpp  SendServerHandler.hpp  WiringSlave.cpp  WiringSlave.hpp  queryserver.hpp  queryserverhandler.hpp
SeRoNetSDK/SeRoNet/State/: CommObjs.hpp  CommObjsSelfDescription.cpp  CommObjsSelfDescription.hpp  StateChangeHandler.cpp  StateChangeHandler.hpp  StateMaster.cpp  StateMaster.hpp  StateSlave.cpp  StateSlave.hpp  StateSlaveHandler.cpp  StateSlaveHandler.hpp  StateUpdateThread.cpp  StateUpdateThread.hpp
SeRoNetSDK/SeRoNet/Utils/: ActiveQueueInputHandlerDecorator.hpp  Component.cpp  Component.hpp  ICommunicationObject.hpp  IObserver.hpp  Semaphore.hpp  SmartComponent.hpp  Task.hpp  observerHandler.cpp  observerHandler.hpp  smartMessageQueue.hh  smartMessageQueue.hpp  smartTaskImpl.hpp
SeRoNetSDK/SeRoNet/Utils/HsUlm/: smartProcessingPattern.hh  smartProcessingPattern.hpp
tests/: CMakeLists.txt  Test_Converter.cpp  Test_Event.cpp  Test_Push.cpp  Test_PushSend.cpp  Test_Query.cpp  Test_Send.cpp  Test_State.cpp  Test_StateSlave.cpp
tests/CommObjs/: CommPose3d.h  CommPose3dOpcUa.cpp  CommPose3dOpcUa.h  CommScan.h  CommScanOpcUa.cpp  CommScanOpcUa.h  CoordinateObject.hpp
tests/Mocks/: MockSendHandler.hpp
tests/SmartSoftOpcUaTests/: CMakeLists.txt  TestingEnvironmentOPCUA.cpp  TestingEnvironmentOPCUA.h  tests_main.cpp
tests/SmartSoftOpcUaTests/CommTestObjectsOPCUA/: Comm3dPoseOPCUA.cpp  Comm3dPoseOPCUA.h  CommTextOPCUA.cpp  CommTextOPCUA.h  CommTrajectoryOPCUA.cpp  CommTrajectoryOPCUA.h
tests/helperClasses/: ComponentHelperTest.hpp  CreateValues.hpp
tests/internalClasses/: CMakeLists.txt  Test_Component.cpp  Test_NamingService.cpp  Test_OpcUaServer.cpp  Test_StateUpdateThread.cpp
(+12 files in other folders)
