CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(SmartSoftOpcUaTests)

FIND_PACKAGE(SmartSoftTests QUIET HINTS $ENV{SMART_ROOT_ACE}/modules)

IF(SmartSoftTests_FOUND)
  FILE(GLOB SRCS ${PROJECT_SOURCE_DIR}/*.cpp)
  FILE(GLOB COMM_SRCS ${PROJECT_SOURCE_DIR}/CommTestObjectsOPCUA/*.cpp)
  ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS} ${COMM_SRCS})
  TARGET_LINK_LIBRARIES(${PROJECT_NAME} SeRoNetSDK SmartSoftTests)
  SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
      CXX_STANDARD 14
  )
ENDIF(SmartSoftTests_FOUND)
